--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "axios": "0.18.0",
-    "jquery": "^3.2.1",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "2.4.6",
+    "jquery": "^3.2.1",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
